# project-internship-testapp

./: README.md  main.py  pyproject.toml  sql_app.db
app/: database.py
app/api/v1/: scores.py  students.py
app/core/: config.py
app/crud/: score.py  student.py
app/models/: score.py  student.py
app/schemas/: score.py  student.py
