[tool.poetry]
name = "testproject"
version = "0.1.0"
description = ""
authors = ["arystambek-dimash <arystambekdimash005@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
sqlalchemy = "^2.0.30"
pydantic = "^2.7.2"
pydantic-settings = "^2.2.1"
alembic = "^1.13.1"
uvicorn = "^0.30.0"
databases = "^0.9.0"
aiosqlite = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
